# reverse-abliterate

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  api.html  demo.py  development.html  genindex.html  index.html  install.html  objects.inv  opencode.jsonc  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  development.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
_sources/: api.rst.txt  index.rst.txt  install.rst.txt
docs/: conf.py  development.rst  usage.rst
src/reverse_abliterate/: __init__.py  cli.py  constants.py  detect.py  harden.py
tests/: test_reverse_abliterate.py
