[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-abliterate"
version = "0.1.0"
description = "Detect and reverse model abliteration; harden LLMs against safety removal"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
reverse-abliterate = "reverse_abliterate.cli:main"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]
