[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "reverse-abliterate"
version = "0.1.0"
description = "Detect and reverse model abliteration; harden LLMs against safety removal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Carlos Rocha", email = "carlosrocha@users.noreply.github.com"}]
keywords = [
    "llm-security", "ai-safety", "model-abliteration",
    "red-team", "prompt-injection", "jailbreak",
    "obliteratus", "l1b3rt4s",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/Carlos-Projects/reverse-abliterate"
Documentation = "https://Carlos-Projects.github.io/reverse-abliterate"
Source = "https://github.com/Carlos-Projects/reverse-abliterate"
Issues = "https://github.com/Carlos-Projects/reverse-abliterate/issues"
Changelog = "https://github.com/Carlos-Projects/reverse-abliterate/blob/master/CHANGELOG.md"

[project.scripts]
reverse-abliterate = "reverse_abliterate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "ARG", "B", "SIM", "PLC", "PLE", "RUF"]
ignore = ["E501", "B904", "B008"]
